--- a/QB/Makefile
+++ b/QB/Makefile
@@ -1,8 +1,8 @@
-C11 = cc -std=c11
+C11 = cc
 #CFLAGS = -Wall -Werror
 
 QB: QB.c pquestions.o questions.o mark.o mode.h questions.h pquestions.h
-	cc QB.c -o QB pquestions.o questions.o mark.o
+	$(C11) QB.c -o QB pquestions.o questions.o mark.o
 
 pquestions.o : pquestions.c mode.h
 	$(C11) -c pquestions.c
