starting final cleanup

--- a/QB/Makefile
+++ b/QB/Makefile
@@ -1,5 +1,5 @@
+# Makefile for the QB
 C11 = cc
-#CFLAGS = -Wall -Werror
 
 QB: QB.c pquestions.o questions.o mark.o mode.h questions.h pquestions.h
 	$(C11) QB.c -o QB pquestions.o questions.o mark.o
@@ -12,3 +12,6 @@ questions.o : questions.c questions.h
 
 mark.o : mark.c questions.h
 	$(C11) -c mark.c
+
+clean:
+	rm -f QB pquestions.o questions.o mark.o
