ready to submit

--- a/TM/Makefile
+++ b/TM/Makefile
@@ -5,6 +5,7 @@ TMDATABASE = TM_database.txt
 build:
 	
 # nothing to do for python in build
-#	rm -rf __pycache__
+
 clean:
 	truncate -s 0 $(TMDATABASE)
+	rm -rf __pycache__
